--- a/app/views/promo/index.html.erb
+++ b/app/views/promo/index.html.erb
@@ -1,5 +1,9 @@
-<h1>Promo#index</h1>
-<p>Find me in app/views/promo/index.html.erb</p>
+<!-- <h1>Promo#index</h1> -->
+<!-- <p>Find me in app/views/promo/index.html.erb</p> -->
+<link rel="stylesheets" href="../assets/stylesheets/promo.scss">
+<p>Устали от бесконечных негативных новостей?</p>
+<p>
+Здесь вы можете отдохнуть от них</p>
 <%= link_to "О проекте", about_path %>
 <%= link_to "Посты", posts_path %>
 <%= link_to "Блог", posts_path %>
